--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<nav>
+  <a href>="home">beranda</a>
+  <a href="history">sejarah</a>
+  <a href="contact">kontak</a>
+</nav>
+
+
 <h1>tutorial bermain tank</h1>
 <p>pertama kalian harus bis rotasi</p>
 <b>harus bisa saling cover sama tim</b>
