--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <nav>
-  <a href>="home">beranda</a>
+  <a href="home">beranda</a>
   <a href="history">sejarah</a>
   <a href="contact">kontak</a>
 </nav>
